style major design changes

--- a/src/index.css
+++ b/src/index.css
@@ -4,48 +4,48 @@
 
 @layer base {
   :root {
-    --background: 45.9 0% 95%;
-    --foreground: 45.9 0% 10%;
-    --card: 45.9 15% 93%;
-    --card-foreground: 45.9 0% 15%;
-    --popover: 45.9 0% 95%;
-    --popover-foreground: 45.9 95% 10%;
-    --primary: 45.9 96.7% 64.5%;
-    --primary-foreground: 0 0% 0%;
-    --secondary: 45.9 10% 70%;
+    --background: 45.4 0% 100%;
+    --foreground: 45.4 0% 0%;
+    --card: 45.4 0% 100%;
+    --card-foreground: 45.4 0% 10%;
+    --popover: 45.4 0% 95%;
+    --popover-foreground: 45.4 95% 0%;
+    --primary: 45.4 100% 50%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 45.4 10% 70%;
     --secondary-foreground: 0 0% 0%;
-    --muted: 7.899999999999999 10% 85%;
-    --muted-foreground: 45.9 0% 35%;
-    --accent: 7.899999999999999 10% 80%;
-    --accent-foreground: 45.9 0% 15%;
+    --muted: 26 10% 85%;
+    --muted-foreground: 45.4 0% 35%;
+    --accent: 26 10% 80%;
+    --accent-foreground: 45.4 0% 10%;
     --destructive: 0 50% 30%;
-    --destructive-foreground: 45.9 0% 90%;
-    --border: 45.9 30% 90%;
-    --input: 45.9 20% 26%;
-    --ring: 45.9 96.7% 64.5%;
-    --radius: 0.5rem;
+    --destructive-foreground: 45.4 0% 100%;
+    --border: 45.4 0% 50%;
+    --input: 45.4 20% 18%;
+    --ring: 45.4 100% 50%;
+    --radius: 1rem;
   }
   .dark {
-    --background: 45.9 10% 10%;
-    --foreground: 45.9 0% 90%;
-    --card: 45.9 0% 10%;
-    --card-foreground: 45.9 0% 90%;
-    --popover: 45.9 10% 5%;
-    --popover-foreground: 45.9 0% 90%;
-    --primary: 45.9 96.7% 64.5%;
-    --primary-foreground: 0 0% 0%;
-    --secondary: 45.9 10% 20%;
+    --background: 64 10% 5%;
+    --foreground: 64 0% 90%;
+    --card: 64 0% 0%;
+    --card-foreground: 64 0% 90%;
+    --popover: 64 10% 5%;
+    --popover-foreground: 64 0% 90%;
+    --primary: 64 100% 50%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 64 10% 10%;
     --secondary-foreground: 0 0% 100%;
-    --muted: 7.899999999999999 10% 25%;
-    --muted-foreground: 45.9 0% 60%;
-    --accent: 7.899999999999999 10% 25%;
-    --accent-foreground: 45.9 0% 90%;
+    --muted: 26 10% 15%;
+    --muted-foreground: 64 0% 60%;
+    --accent: 26 10% 15%;
+    --accent-foreground: 64 0% 90%;
     --destructive: 0 50% 30%;
-    --destructive-foreground: 45.9 0% 90%;
-    --border: 45.9 20% 26%;
-    --input: 45.9 20% 26%;
-    --ring: 45.9 96.7% 64.5%;
-    --radius: 0.5rem;
+    --destructive-foreground: 64 0% 90%;
+    --border: 64 20% 18%;
+    --input: 64 20% 18%;
+    --ring: 64 100% 50%;
+    --radius: 1rem;
   }
 }
 
